changed fixture adapters to physics adapters created debug skins for physics components created a Joint class and JointSkin that work

--- a/src/com/flexmojo/physics/Joint.mxml
+++ b/src/com/flexmojo/physics/Joint.mxml
@@ -7,4 +7,9 @@
 		<fx:Number id="xTo"/>
 		<fx:Number id="yTo"/>
 	</fx:Declarations>
+	<fx:Metadata>
+		[Style(name="strokeAlpha", type="Number", inherit="yes")]
+		[Style(name="strokeWeight", type="Number", inherit="yes")]
+		[Style(name="strokeColor", type="Number", format="Color", inherit="yes")]
+	</fx:Metadata>
 </s:SkinnableComponent>
