--- a/src/com/flexmojo/physics/joint/Joint.mxml
+++ b/src/com/flexmojo/physics/joint/Joint.mxml
@@ -2,7 +2,7 @@
 <s:SkinnableComponent xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					  xmlns:s="library://ns.adobe.com/flex/spark" 
 					  xmlns:mx="library://ns.adobe.com/flex/mx"
-					  skinClass="com.flexmojo.physics.JointSkin">
+					  skinClass="com.flexmojo.physics.joint.JointSkin">
 	<fx:Declarations>
 		<fx:Number id="xTo"/>
 		<fx:Number id="yTo"/>
