--- a/src/com/flexmojo/physics/joint/Joint.mxml
+++ b/src/com/flexmojo/physics/joint/Joint.mxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SkinnableComponent xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					  xmlns:s="library://ns.adobe.com/flex/spark" 
-					  xmlns:mx="library://ns.adobe.com/flex/mx"
-					  skinClass="com.flexmojo.physics.joint.JointSkin">
+					  xmlns:mx="library://ns.adobe.com/flex/mx">
 	<fx:Declarations>
 		<fx:Number id="xTo"/>
 		<fx:Number id="yTo"/>
