--- a/src/defaults.css
+++ b/src/defaults.css
@@ -8,6 +8,7 @@ physics|PhysicalComponent {
 	friction : 0;
 	restitution : 0;
 	density : 0;
+	staticBody: false;
 	fixedRotation : false;
 	
 	physicsAdapterClass : ClassReference("com.flexmojo.physics.adapter.DefaultPhysicsAdapter");
