--- a/src/com/flexmojo/physics/PhysicalComponent.mxml
+++ b/src/com/flexmojo/physics/PhysicalComponent.mxml
@@ -2,23 +2,31 @@
 <s:SkinnableComponent xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					  xmlns:s="library://ns.adobe.com/flex/spark" 
 					  xmlns:Dynamics="Box2D.Dynamics.*"
-					  xmlns:mx="library://ns.adobe.com/flex/mx">
+					  xmlns:mx="library://ns.adobe.com/flex/mx"
+					  implements="com.flexmojo.physics.IPhysicalComponent">
 	<fx:Metadata>
-		[Style(name="density",type="Number",inherit="yes")]
-		[Style(name="friction",type="Number",inherit="yes")]
-		[Style(name="restitution",type="Number",inherit="yes")]
-		[Style(name="fixedRotation",type="Boolean",inherit="yes")]
-		[Style(name="physicsAdapterClass",type="Class",inherit="yes")]
+		[Style(name="density",type="Number",inherit="no")]
+		[Style(name="friction",type="Number",inherit="no")]
+		[Style(name="restitution",type="Number",inherit="no")]
+		[Style(name="staticBody", type="Boolean", inherit="no")]
+		[Style(name="fixedRotation",type="Boolean",inherit="no")]
+		[Style(name="physicsAdapterClass",type="Class",inherit="no")]
 	</fx:Metadata>
 	
 	<fx:Script>
 		<![CDATA[
 			import Box2D.Dynamics.b2Body;
 			
-			public var physicalBody:b2Body;
+			private var _physicalBody:b2Body;
+			public function set physicalBody(b:b2Body):void {
+				_physicalBody = b;
+			}
+			public function get physicalBody():b2Body {
+				return _physicalBody;
+			}
 			
 			public function get imperturbable():Boolean {
-				return getStyle('density') == 0;
+				return getStyle("staticBody") == true;
 			}
 		]]>
 	</fx:Script>
